[package]
edition = "2021"
name = "gateway-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.6"
hyper = { version = "0.14.17", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = { version = "1.0.79", features = ["std"] }
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.8"
tower = "0.4.12"
tower-http = { version = "0.2.5", features = [
    "catch-panic",
    "compression-br",
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
